# kufar_server_finder_project

./: .env.example  .gitignore  README.md  main.py  output.xlsx  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/kufar_server_finder/: __init__.py  benchmark.py  cli.py  config.py  constants.py  excel_export.py  gemini.py  kufar.py  models.py  pipeline.py  prompts.py  socket_inference.py  storage.py  visual_refinement.py
tests/: test_benchmark.py  test_cli.py  test_config.py  test_core_integration.py  test_excel_export.py  test_gemini.py  test_kufar.py  test_main_module.py  test_pipeline.py  test_prompts.py  test_socket_inference.py  test_storage.py  test_visual_refinement.py
