[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kufar-server-finder"
version = "1.0.0"
description = "Сбор и AI-фильтрация объявлений Kufar для поиска недорогих Debian-серверов"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "google-genai>=1.0,<2",
  "openpyxl>=3.1.5,<4",
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
kufar-server-finder = "kufar_server_finder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
