[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kufar-server-finder"
version = "2.0.0"
description = "Поиск недорогих рабочих компьютеров на Kufar поверх kufar-finder-core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "kufar-finder-core>=1.1,<2",
  "openpyxl>=3.1.5,<4",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "pytest-cov>=5,<8"]

[project.scripts]
kufar-server-finder = "kufar_server_finder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
  "--cov=kufar_server_finder",
  "--cov-report=term-missing",
  "--cov-fail-under=100",
]
